--- a/backend_deposit/templates/payment/payment_edit.html
+++ b/backend_deposit/templates/payment/payment_edit.html
@@ -25,8 +25,8 @@
                 <td>{{ payment.create_at }}</td>
             </tr>
             <tr>
-                <td>shop</td>
-                <td>{{ payment.shop }}</td>
+                <td>merchant</td>
+                <td>{{ payment.merchant }}</td>
             </tr>
             <tr>
                 <td>order_id</td>
