--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -22,6 +22,7 @@
             <li><a class="dropdown-item" href="{% url 'deposit:stats_day' %}">Статистика по дням</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:stats' %}">Карты + дни</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:graph' %}">График</a></li>
+             <li><a class="dropdown-item" href="{% url 'deposit:check_sms' %}">Проверить смс</a></li>
           </ul>
         </li>
       </ul>
