--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -15,14 +15,15 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown ">
           <a class="nav-link dropdown-toggle {% if app_name == 'posts' %}link-danger{% endif %}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Статистика
+            Меню админа
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'deposit:stats_card' %}">Статистика по картам</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:stats_day' %}">Статистика по дням</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:stats' %}">Карты + дни</a></li>
             <li><a class="dropdown-item" href="{% url 'deposit:graph' %}">График</a></li>
-             <li><a class="dropdown-item" href="{% url 'deposit:check_sms' %}">Проверить смс</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:check_sms' %}">Проверить смс</a></li>
+            <li><a class="dropdown-item" href="{% url 'deposit:incoming_checks' %}">Проверка бирпай</a></li>
           </ul>
         </li>
       </ul>
