--- a/backend_deposit/templates/deposit/incoming_checks_list.html
+++ b/backend_deposit/templates/deposit/incoming_checks_list.html
@@ -40,6 +40,7 @@
      <table id="table" class="table table-bordered table-hover table-sm" style="font-size: 14px; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
      <thead class="">
      <tr class="">
+         <th>id</th>
            <th>create_at</th>
            <th>change_time</th>
            <th>birpay_id</th>
@@ -52,7 +53,7 @@
      </thead>
      <tbody style="text-align: end" >
          {% for obj in page_obj %}
-
+            <td>{{ obj.id }}</td>
             <td>{{ obj.create_at|date:"d.m H:i" }}</td>
             <td>{{ obj.change_time|date:"d.m H:i" }}</td>
              <td><a href="{% url 'deposit:incoming_edit' obj.incoming.id  %}">{{ obj.birpay_id }}</a></td>
@@ -74,47 +75,4 @@
 
 {% endblock %}
 
-{% block javascript %}
-  {% with request.resolver_match.view_name as view_name %}
-  {% if view_name != 'deposit:incomings_empty' and view_name != 'deposit:incomings_search'%}
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-                function getPosts() {
-            $.ajax({
-                url: '/get_posts/',
-                type: 'get',
-                dataType: 'json',
-                data: {'filter': $('#filter').text() },
-                success: function(response) {
-                        var last_id = $('#last_id').text().replace(/\D/g, '')
-                        var num = response[0].id
 
-                        var count = num - last_id
-                        var div = $('#warnings')
-                        div.html(`Новых платежей: ${count}`);
-                        if (count >= 1) {
-                            div.addClass("alert alert-warning")
-                        }
-                        {% if  request.user.profile.view_bad_warning %}
-                            var current_bad_id = response[0].last_bad_id
-                            var last_bad_id = $('#last_bad_id').text().replace(/\D/g, '')
-                            var count_bad_screen = current_bad_id - last_bad_id
-                            console.log(current_bad_id)
-                            console.log(last_bad_id)
-                            console.log(count_bad_screen)
-                            if (count_bad_screen > 0) {
-                                alert('Проблема с работой макроса!');
-                                document.getElementById("last_bad_id").textContent=current_bad_id.toString();
-                            }
-                        {% endif %}
-
-                }
-            });
-        }
-        // Вызываем функцию для получения списка постов
-        getPosts();
-        setInterval(getPosts, 5000)
-    </script>
-    {% endif %}
-    {% endwith %}
-{% endblock %}
