--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -56,7 +56,7 @@
 {% endif %}
 
     {% include 'includes/paginator.html' %}
-     <div class="container-fluid ">
+     <div class="container">
          <table id="table" class="table table-bordered table-hover table-sm" style="font-size: 14px; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
             <thead>
                 <tr>
@@ -73,7 +73,7 @@
                     <th>User</th>
                     <th>Customer Name</th>
                     <th>Operator</th>
-                    <th>Check File (Скачанный)</th>
+                    <th>Чек</th>
 <!--                    <th>Check File URL (Исходный)</th>-->
                     <th>Raw Data</th>
                     <th>GPT Data</th>
@@ -99,7 +99,7 @@
                     <td>{{ order.operator|default_if_none:"" }}</td>
                     <td>
                         {% if order.check_file %}
-                            <a href="{{ order.check_file.url }}" target="_blank">Скачанный файл</a>
+                            <a href="{{ order.check_file.url }}" target="_blank">Чек</a>
                         {% else %}
                             -
                         {% endif %}
@@ -113,7 +113,7 @@
 <!--                    </td>-->
 
                     <td>
-                        <a href="#" onclick="showRawData('{{ order.birpay_id }}'); return false;">Просмотр</a>
+                        <a href="#" onclick="showRawData('{{ order.birpay_id }}'); return false;">RAW</a>
                         <script id="rawdata-{{ order.birpay_id }}" type="application/json">
                             {{ order.raw_data_json|safe }}
                         </script>
