--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% include 'includes/operator_menu.html' %}
-<div class="container">
+<div style="padding-left:0; padding-right:0;">
 {% include 'includes/switcher2.html' %}
 
 
@@ -36,7 +36,7 @@
 
 
      {% include 'includes/paginator.html' %}
-     <div class="container-fluid ">
+<div style="padding-left:0; padding-right:0;">
      <table id="table" class="table table-bordered table-hover table-sm table-mini" style="font-size: 14px; line-height: 100%; width: auto; padding: .1rem .1rem .1rem .1rem">
      <thead class="">
      <tr class="">
