--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% with request.resolver_match.view_name as view_name %}
 {% with request.resolver_match.app_name as app_name %}
-<div class="container">
+<div >
   <nav class="navbar navbar-expand-md bg-body-tertiary">
 
     <a class="navbar-brand" href="{% url 'deposit:deposits' %}">
