--- a/backend_deposit/templates/deposit/birpay_orders.html
+++ b/backend_deposit/templates/deposit/birpay_orders.html
@@ -76,6 +76,7 @@
                     <th>Чек</th>
                     <th>Raw Data</th>
                     <th>GPT Data</th>
+                    <th>GPT ИМХО</th>
                 </tr>
             </thead>
             <tbody>
@@ -108,11 +109,13 @@
                         <a href="{% url 'deposit:birpay_order_raw' order.birpay_id %}">RAW</a>
                     </td>
                     <td>{{ order.gpt_data }}</td>
+                                <td>{{ order.gpt_status }}</td>
                 </tr>
             {% empty %}
                 <tr>
                     <td colspan="14">Нет данных</td>
                 </tr>
+
             {% endfor %}
             </tbody>
          </table>
