--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -45,12 +45,14 @@
     </div>
     {% endif %}
 
+
+
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-{#          <li class="nav-item">#}
-{#          <a class="nav-link"href="{% url 'deposit:deposits_pending' %}">Депозиты</a>#}
-{#          </li>#}
           <li class="nav-item">
-          <a class="nav-link" href="{% url 'deposit:incomings' %}">Платежи</a>
+            <a class="nav-link" href="{% url 'deposit:birpay_panel' %}">birpay_panel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'deposit:incomings' %}">Платежи</a>
           </li>
           <li class="nav-item">
           <a class="nav-link" href="{% url 'admin:index' %}">Админка</a>
