--- a/backend_deposit/templates/deposit/birpay_panel.html
+++ b/backend_deposit/templates/deposit/birpay_panel.html
@@ -8,7 +8,20 @@
         width: 10ch;
         box-sizing:border-box;
         padding:0px;
+        margin-top: -3px;
+        margin-bottom: -3px;
         font-size:13px;"
+    }
+    .my-table {
+        font-size: 14px;
+        line-height: 75%;
+        width: auto;
+    }
+    .my-button {
+        margin-bottom: -5px;
+        margin-top: -5px;
+        height: 20px;
+        font-size: x-small
     }
 </style>
     {% load l10n %}
@@ -22,8 +35,8 @@
 <div class="row mb-3">
   <div class="col-12">
 
-      
-      
+
+
   </div>
 </div>
 
@@ -54,7 +67,7 @@
     {% include 'includes/paginator.html' %}
     <div class="row">
     <div class="col-md-6" >
-         <table id="table" class="table table-bordered table-hover table-sm width:auto;" style="font-size: 14px; line-height: 100%; width: auto; padding: .1rem .1rem .1rem .1rem">
+         <table id="table" class="my-table table table-bordered table-hover table-sm width:auto;">
             <thead>
                 <tr>
                     <th>Tx ID</th>
@@ -87,7 +100,7 @@
                         <form action="{% url 'deposit:birpay_panel' %}" method="post">
                             {% csrf_token %}
 
-                              <button style="margin-bottom: -10px; margin-top: -10px; height: 22px;font-size: small" type="submit" class="btn btn-warning btn-sm">Ok</button>
+                              <button  class="my-button btn btn-warning btn-sm">Ok</button>
 
                         </form>
                     </td>
@@ -103,7 +116,7 @@
      </div>
 
      <div class="col-6">
-         <table id="table" class="table table-bordered table-hover table-sm width:auto;" style="font-size: 14px; line-height: 100%; width: auto; padding: .1rem .1rem .1rem .1rem">
+         <table id="table" class="my-table table table-bordered table-hover table-sm width:auto;" >
             <thead>
                  <tr class="">
                        <th>id</th>
@@ -113,6 +126,7 @@
                        <th>Pay</th>
                        <th>Тр-я</th>
                        <th>Бирпай</th>
+                     <th>OK</th>
                    </tr>
             </thead>
             <tbody>
@@ -135,15 +149,15 @@
 
             <td title="{{ incoming.transaction }}">{{ incoming.transaction|default_if_none:""|make_list|slice:'-4:'|join:'' }}</td>
 
-         {% load l10n %}
-         {% localize off %}
+
+             <td><input class="my-input button"></td>
             <td class="text-nowrap">
                 <form action="{% url 'deposit:birpay_panel' %}" method="post">
                                     {% csrf_token %}
-                      <button style="margin-bottom: -10px; margin-top: -10px; height: 25px;font-size: small" type="submit" class="btn btn-warning btn-sm">Ok</button>
+                      <button class="my-button btn btn-warning btn-sm">Ok</button>
                 </form>
             </td>
-         {% endlocalize %}
+
 
          </tr>
          {% endfor %}
